--- a/src/App.css
+++ b/src/App.css
@@ -5,34 +5,6 @@
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
 .card {
   padding: 2em;
 }
@@ -41,3 +13,46 @@
   color: #888;
 }
 
+.Logo {
+  display: flex;
+  align-items: center;
+  font-size: 2.5rem;
+  flex-direction: row-reverse;
+  gap: 1rem;
+}
+
+.Logo img {
+  height: 82px;
+}
+
+.App {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.Search-input {
+  background-image: url("assets/google-37.svg");
+  background-repeat: no-repeat;
+  background-position: left;
+  background-position-x: 15px;
+  background-size: 1.1rem;
+  width: 40rem;
+  height: 2.8rem;
+  border-radius: 8px;
+  border: none;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2), 0 4px 8px rgba(0, 0, 0, 0.1),
+    inset 0 1px 2px rgba(255, 255, 255, 0.5);
+  outline: none;
+  font-family: inherit;
+  font-size: inherit;
+  padding-left: 15px;
+  margin-top: 48px;
+  padding-inline-start: 52px;
+  padding-inline-end: 10px;
+}
+
+h4 {
+  color: rgb(107, 106, 106);
+  font-weight: 400;
+}
