--- a/src/index.css
+++ b/src/index.css
@@ -13,49 +13,19 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
   margin: 0;
+  margin-top: 210px;
   display: flex;
   justify-content: center;
-  align-items: center;
   min-width: 320px;
   min-height: 50vh;
 }
 
 h1 {
-  font-size: 3.2em;
+  font-size: 43px;
   line-height: 1.1;
-  color: #1a1a1a;
-  font-size: 50px;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-  color: white;
-}
-button:hover {
-  border-color: #ffffff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  color: #1a1a1a;  
 }
 
 @media (prefers-color-scheme: dark) {
@@ -71,33 +41,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
-
-.Logo {
-  display: flex;
-  align-items: center;
-  font-size: 2.5rem;
-  flex-direction: row-reverse;
-  gap: 1rem;
-}
-
-.Logo img {
-  height: 5rem;
-}
-
-.App {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-}
-
-.Search-input {
-  width: 40rem;
-  height: 2.8rem;
-  border-radius: 8px;
-  border: none;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2), 0 4px 8px rgba(0, 0, 0, 0.1),inset 0 1px 2px rgba(255, 255, 255, 0.5);
-  outline: none;
-  font-family: 'Arial', sans-serif;
-  font-size: 15px;
 }
